classDiagram
    direction TB

    class Value {
        <<struct>>
        +ValueType type
        +int intVal
        +double floatVal
        +bool boolVal
        +string stringVal
        +vector~Value~ arrayVal
        +unordered_map~string Value~ dictVal
        +string className
        +unordered_map~string Value~ fields
        +string closureName
        +shared_ptr~Environment~ closureEnv
        +vector~string~ closureParams
        +isClosure() bool
        +isInt() bool
        +isFloat() bool
        +isBool() bool
        +isString() bool
        +isNull() bool
        +isArray() bool
        +isDict() bool
        +isInstance() bool
        +isNumber() bool
        +toDouble() double
        +toString() string
        +isTruthy() bool
        +equals(other Value) bool
        +nullValue()$ Value
        +makeInstance(clsName string)$ Value
        +makeClosure(name string, env shared_ptr~Environment~, params vector~string~)$ Value
    }

    class ValueType {
        <<enumeration>>
        VAL_INT
        VAL_FLOAT
        VAL_BOOL
        VAL_STRING
        VAL_NULL
        VAL_ARRAY
        VAL_DICT
        VAL_INSTANCE
        VAL_CLOSURE
    }

    class Environment {
        +shared_ptr~Environment~ parent
        +define(name string, val Value) void
        +get(name string) Value
        +set(name string, val Value) bool
        +hasVariable(name string) bool
        +allVariables() vector~pair~string Value~~
        +localVariables() unordered_map~string Value~
    }

    class Interpreter {
        -shared_ptr~Environment~ globalEnv_
        -shared_ptr~Environment~ currentEnv_
        -vector~CallFrame~ callStack_
        -DebugController* debugger_
        -bool debugMode_
        -function~void(string)~ outputCallback_
        -int recursionDepth_
        -unordered_map~string FunDecl*~ funRegistry_
        -unordered_map~string ClassInfo~ classRegistry_
        -unordered_map~string string~ typeAnnotations_
        +execute(program Block) Value
        +executeRepl(program Block) Value
        +visitFunDecl(node FunDecl) Value
        +visitFunCall(node FunCall) Value
        +visitIndexAssign(node IndexAssign) Value
        +visitMemberAssign(node MemberAssign) Value
        +visitVarDecl(node VarDecl) Value
        +visitAssignment(node Assignment) Value
        +visitReturnStmt(node ReturnStmt) Value
        -writeBack(node ASTNode*, modifiedValue Value, line int, col int) void
        -typeMatch(val Value, annotation string) bool
        -checkType(val Value, annotation string, context string, line int, col int) void
        -findTypeAnnotation(varName string) string
    }

    class CallFrame {
        <<struct>>
        +string functionName
        +Environment* env
        +int line
        +int depth
    }

    class ClassInfo {
        <<struct>>
        +string name
        +string superClassName
        +unordered_map~string FunDecl*~ methods
        +unordered_map~string Value~ fields
        +ClassInfo* superClass
    }

    class Compiler {
        -BytecodeChunk chunk_
        -unordered_map~string uint16_t~ varIndex_
        -unordered_map~string BytecodeChunk~ functionChunks_
        -unordered_map~string int~ currentLocals_
        -string lastError_
        +compile(program Block) CompileResult
        -compileFunDecl(node FunDecl) void
        -compileFunCall(node FunCall) void
        -identifierIndex(name string) uint16_t
    }

    class BytecodeChunk {
        +vector~uint8_t~ code
        +vector~Value~ constants
        +vector~int~ lines
        +string name
        +int arity
        +write(byte uint8_t, line int) void
        +writeOp(op OpCode, line int) void
        +writeShort(value uint16_t, line int) void
        +addConstant(val Value) uint16_t
        +disassemble() string
    }

    class CompileResult {
        <<struct>>
        +BytecodeChunk mainChunk
        +unordered_map~string BytecodeChunk~ functionChunks
    }

    class OpCode {
        <<enumeration>>
        OP_CONSTANT
        OP_INT
        OP_FLOAT
        OP_STRING
        OP_NULL
        OP_TRUE
        OP_FALSE
        OP_ADD
        OP_SUBTRACT
        OP_MULTIPLY
        OP_DIVIDE
        OP_MODULO
        OP_NEGATE
        OP_NOT
        OP_EQUAL
        OP_NOT_EQUAL
        OP_LESS
        OP_GREATER
        OP_LESS_EQUAL
        OP_GREATER_EQUAL
        OP_AND
        OP_OR
        OP_PRINT
        OP_POP
        OP_DEFINE_VAR
        OP_GET_VAR
        OP_SET_VAR
        OP_GET_LOCAL
        OP_SET_LOCAL
        OP_JUMP
        OP_JUMP_IF_FALSE
        OP_LOOP
        OP_RETURN
        OP_CALL
        OP_CLOSURE
        OP_CLASS_NEW
        OP_BUILD_ARRAY
        OP_INDEX_GET
        OP_INDEX_SET
        OP_MEMBER_GET
        OP_MEMBER_SET
        OP_METHOD_CALL
        OP_DUP
    }

    class VM {
        -vector~Value~ stack_
        -unordered_map~string Value~ globals_
        -vector~VMCallFrame~ frames_
        -unordered_map~string BytecodeChunk~ functionChunks_
        -function~void(string)~ outputCallback_
        -function~void(VMStepInfo)~ stepCallback_
        -bool stepCallbackEnabled_
        -string lastError_
        +execute(result CompileResult) VMResult
        +setOutputCallback(cb function) void
        +setStepCallback(cb function) void
        -push(val Value) void
        -pop() Value
        -peek(distance size_t) Value&
    }

    class VMCallFrame {
        <<struct>>
        +BytecodeChunk* chunk
        +size_t ip
        +size_t basePointer
        +string functionName
    }

    class VMStepInfo {
        <<struct>>
        +size_t ip
        +OpCode opcode
        +vector~Value~ stackSnapshot
        +unordered_map~string Value~ globalsSnapshot
    }

    Value --> ValueType
    Value --> Environment : closureEnv
    Interpreter --> Environment : currentEnv_
    Interpreter --> CallFrame : callStack_
    Interpreter --> ClassInfo : classRegistry_
    Interpreter --> Value : evaluates
    Compiler --> BytecodeChunk : chunk_
    Compiler --> CompileResult : produces
    CompileResult --> BytecodeChunk
    VM --> VMCallFrame : frames_
    VM --> CompileResult : consumes
    VM --> BytecodeChunk : functionChunks_
    VMCallFrame --> BytecodeChunk : chunk
    VM --> Value : stack_
    Environment --> Environment : parent
    Environment --> Value : variables
